[tool.black]
skip-string-normalization = true

[tool.poetry]
name = "dsplot"
version = "0.2.0"
description = "Plot data structures with ease."
authors = ["Bill <trantriducs@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = [
    "Data Structure",
    "Tree",
    "Graph",
    "Plot"
]

[tool.poetry.dependencies]
python = "^3.7"
graphviz = "^0.17"
pygraphviz = "^1.7"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pre-commit = "*"

[tool.poetry.extras]
all = ["graphviz"]
graphviz = ["graphviz"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
